uploaded for testing :zap:

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # compiled output
-/dist
+
 /node_modules
 
 # Logs
@@ -10,6 +10,8 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+
+.env 
 
 # OS
 .DS_Store
